- Remplissement des TDD sur les méthodes des classes VoitureServiceTest.java, VoitureRepositoryTest.java et les constructeurs de toutes les entités. - Ajout d'une classe VoitureMapper.java pour prendre en compte la conversion des Voiture en VoitureDTo et inversement - Implémentation des fonctions de recherches par preférence